--- a/hotel/templates/hotel/lsta_habitacion.html
+++ b/hotel/templates/hotel/lsta_habitacion.html
@@ -7,7 +7,7 @@
 {% for instance in object_list %}
     <p>
         {{ instance.id }} - 
-        <a href = '{{ instace.get_absolute_url }}'>{{ instance.tipo  }}</a>
+        <a href = '{{ instance.get_absolute_url }}'>{{ instance.tipo  }}</a>
     </p>
 {% endfor  %}
 {% endblock %}
