--- a/hotel/templates/base.html
+++ b/hotel/templates/base.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>
+            <h1>BIENVENIDOS A NUESTRO HOTEL EPIS</h1>
             {% block title %}
             {% endblock %}
         </title>
@@ -9,5 +10,9 @@
     <body>
         {% block body %}
         {% endblock %}
+        <hr>
+        <div>
+            <h3> DERECHOS DE COPYRIGHT</h3>
+        </div>
     </body>
 </html>
