--- a/hotel/templates/hotel/lsta_habitacion.html
+++ b/hotel/templates/hotel/lsta_habitacion.html
@@ -1,9 +1,9 @@
 {% extends 'base.html' %}
 {% block title %}
-    Lista de Habitaciones
+    Hotel EPIS
 {% endblock %}
 {% block body %}
-<h1> Lista de habitaciones </h1>
+<h1> LISTA DE TODAS LAS HABITACIONES </h1>
 {% for instance in object_list %}
     <p>
         {{ instance.id }} - 
