Se corrigieron problemas con el formulario de clientes

--- a/hotel/templates/hotel/habitacion_detail.html
+++ b/hotel/templates/hotel/habitacion_detail.html
@@ -1,5 +1,6 @@
+{% extends 'base.html' %}
 {% block title %}
-    <h1>Detalle de habitacion</h1>
+    Detalle de habitacion
 {% endblock  %}
 {% block body %}
 <h1>{{ object.tipo }}</h1>
