--- a/hotel/templates/base.html
+++ b/hotel/templates/base.html
@@ -10,17 +10,20 @@
     <body>
         {% block nav %}
             <ul>
-                <li><a href = ""> Habitaciones Disponibles</a></li>
-                <li><a href = ""> Registrar Cliente</a></li>
-                <li><a href = ""> Actualizar Habitacion</a></li>
-                <li><a href = ""> Buscar Cliente</a></li>
+                
+                <li><a href = "{% url 'hotel:habitacion-list' %}"> Habitaciones</a></li>
+                <li><a href = "{% url 'hotel:clie-adding' %}"> Registrar Cliente</a></li>
+                <li><a href = "{% url 'hotel:habi-dispo' %}">Habitaciones Disponibles</a></li>
+                <li><a href = "{% url 'hotel:clie-search' %}"> Buscar Cliente</a></li>
             </ul>
         {% endblock %}
         {% block body %}
         {% endblock %}
-        <hr>
-        <div>
-            <h3> DERECHOS DE COPYRIGHT</h3>
-        </div>
+        {% block footer %}
+            <hr>
+            <div>
+                <h3> DERECHOS DE COPYRIGHT</h3>
+            </div>
+        {% endblock %}
     </body>
 </html>
