--- a/hotel/templates/hotel/habitacion_detail.html
+++ b/hotel/templates/hotel/habitacion_detail.html
@@ -3,16 +3,22 @@
     Detalle de habitacion
 {% endblock  %}
 {% block body %}
-<h1>{{ object.tipo }}</h1>
+<h1>Habitacion tipo --> {{ object.tipo }}</h1>
+<br>
 <table>
     <tr>
         <th>NUMERO</th>
+        <th>------</th>
         <th>TIEMPO</th>
+        <th>------</th>
         <th>SERVICIOS</th>
     </tr>
+    <tr></tr>
     <tr>
         <th>{{ object.numero }}</th>
+        <th>------</th>
         <th>{{ object.dias }}</th>
+        <th>------</th>
         <th>{{ object.servicios }}</th>
     </tr>
 </table>
