Se agrego las vistas Json

--- a/hotel/templates/hotel/clienteSearch.html
+++ b/hotel/templates/hotel/clienteSearch.html
@@ -9,5 +9,7 @@
         <input type = 'text' name = 'nombre' placeholder = 'buscar'/>
         <input type = 'submit' value = 'Buscar'/>
     </form>
+     <h2> Link de vista JSON </h2>
+    <a href='cliJSON/'>Haz click aqui</a>
 {% endblock %}
 
