--- a/hotel/templates/hotel/lsta_habitacion.html
+++ b/hotel/templates/hotel/lsta_habitacion.html
@@ -12,4 +12,8 @@
     </p>
     <br>
 {% endfor  %}
+
+	<h2>Vista de Habitaciones JSON</h2>
+        <a href='habiJSON/'>Haz click aqui</a>
+
 {% endblock %}
