--- a/hotel/templates/hotel/lsta_habitacion.html
+++ b/hotel/templates/hotel/lsta_habitacion.html
@@ -7,8 +7,8 @@
 <br>
 {% for instance in object_list %}
     <p>
+        {{ instance.id }}-{{ instance }}--->
         <a href = '{{ instance.get_absolute_url }}'>{{ instance.tipo  }}</a>
-        <p> <--Cantidad--> </p> {{ instance.numero }}
     </p>
     <br>
 {% endfor  %}
