--- a/hotel/templates/base.html
+++ b/hotel/templates/base.html
@@ -31,9 +31,8 @@
                     {% endblock %}
                 </article>
             </section>
-            <div class="img">
-                
-            </div>
+            {% block descrip %}
+            {% endblock %}
         </section>
         {% block footer %}
             <hr>
