--- a/hotel/templates/hotel/habitacion_detail.html
+++ b/hotel/templates/hotel/habitacion_detail.html
@@ -22,7 +22,7 @@
         <p>
             Descripción:
         </p>
-        
+        {{ object.descripcion }}
     </article>
 </section>
 {% endblock %}
