--- a/hotel/templates/hotel/lsta_cliente.html
+++ b/hotel/templates/hotel/lsta_cliente.html
@@ -4,10 +4,12 @@
 {% endblock %}
 {% block body %}
     <h1>Listado de clientes</h1>
+    <br> 
     {% for instance in object_list %}
         <p>
             {{ instance.id }} -
-            <a href ''> {{ instance.nombres }} </a>
+            <a href = '{{ instance.get_absolute_url }}'> {{ instance.nombres }} </a>
         </p>
+        <br>
     {%  endfor %}
 {% endblock %}
