--- a/hotel/templates/base.html
+++ b/hotel/templates/base.html
@@ -19,6 +19,7 @@
                             <li><a href = "{% url 'hotel:clie-adding' %}"> Registrar Cliente</a></li>
                             <li><a href = "{% url 'hotel:habi-dispo' %}">Habitaciones Disponibles</a></li>
                             <li><a href = "{% url 'hotel:clie-search' %}"> Buscar Cliente</a></li>
+                            <li><a href = "{% url 'hotel:habi-add' %}"> Agregar Habitacion</a></li>
                         </ul>
                     {% endblock %}
                 </nav>
