Ahora la vista de actualizar habitacion funciona

--- a/hotel/templates/hotel/habitacion_detail.html
+++ b/hotel/templates/hotel/habitacion_detail.html
@@ -18,7 +18,9 @@
 <p>
     Estado de la habitacion --->
     {% if object.estado %}
-    Esta ocupado
+        Esta ocupado
+    {% else %}
+        Esta desocupado
     {% endif %}
 </p>
 <br>
