--- a/hotel/templates/hotel/habitacion_detail.html
+++ b/hotel/templates/hotel/habitacion_detail.html
@@ -24,6 +24,10 @@
     {% endif %}
 </p>
 <br>
+<p>
+    <button  onclick="location.href='update/'">ACTUALIZAR</button> 
+</p>
+<br>
 {% endblock %}
 {% block descrip %}
 <section class="descrip">
